# BDII

mini_sgbd/: .gitignore  CMakeLists.txt  README.md  main.cpp
mini_sgbd/mini_sgbd/src/storage/: disk_manager.h  slot_directory.h
mini_sgbd/src/buffer/: buffer_manager.cpp  buffer_manager.h
mini_sgbd/src/common/: config.h  types.h
mini_sgbd/src/index/: btree.cpp  btree.h  btree_node.cpp  btree_node.h
mini_sgbd/src/storage/: disk_manager.cpp  disk_manager.h  page.h
mini_sgbd/tests/: test_btree.cpp  test_buffer.cpp  test_storage.cpp
